# pupil_check_api

./: README.md  makefile  pyproject.toml
pupil_check_back/: config.py  dependency_injection.py  main.py
pupil_check_back/routes/: __init__.py  video.py
tests/: test_pupil_check_back.py
